# waterheater

./: .gitignore  README.md  ctl.py  heater_history.py  main.py  mqtt_bridge.py  package-lock.json  package.json  pyproject.toml  sync_config.jsonc  tailwind.config.js  test.py
.cursor/rules/: waterheater.mdc
docs/superpowers/plans/: 2026-03-18-basic-components-ui-rewrite.md  2026-05-31-ldr-heater-detection.md
docs/superpowers/specs/: 2026-05-31-ldr-heater-detection-design.md
tests/: test_ldr.py
waterheater.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/static/: main.css  main.js
web/templates/: index.html
