[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "waterheater"
version = "0.1.0"
description = "Water heater control via NEMA 17 stepper on Raspberry Pi with web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "rpi-lgpio>=0.6",
    "rpimotorlib>=3.3",
    "Flask>=2.0",
    "python-socketio>=5.0",
    "eventlet>=0.33",
    "flask-socketio>=5.5.1",
]

[tool.setuptools]
py-modules = ["main"]
